@@ -439,6 +439,8 @@ Release 0.92.0 - Unreleased
                time we issued bulk user region close call on our way out
    HBASE-4815  Disable online altering by default, create a config for it
    HBASE-4623  Remove @deprecated Scan methods in 0.90 from TRUNK and 0.92
+   HBASE-4842  [hbck] Fix intermittent failures on TestHBaseFsck.testHBaseFsck
+               (Jon Hsieh)
 
   TESTS
    HBASE-4450  test for number of blocks read: to serve as baseline for expected
